# workcode

./: README.md
backend/: README.md  config.py  database.db  database.drawio  docker-compose.yml  pom.xml  pyproject.toml  requirements.txt
backend/app/: __init__.py
backend/app/application/: controllers.py  engine.py  models.py  schemas.py
backend/app/auth/: controllers.py  models.py
backend/app/docker/: controllers.py  engine.py  schemas.py
backend/auth-service/: pom.xml
backend/auth-service/src/main/java/com/workcode/authservice/: AuthServiceApplication.java
backend/auth-service/src/main/resources/: bootstrap.yml
backend/auth-service/src/test/java/com/workcode/authservice/: AuthServiceApplicationTests.java
backend/config-data/: auth-service.yml  gateway-service.yml  users-service.yml  workspaces-service.yml
backend/config-service/: pom.xml
backend/config-service/src/main/resources/: application.yml
backend/eureka-service/: pom.xml
backend/eureka-service/src/main/resources/: bootstrap.yml
backend/gateway-service/: pom.xml
backend/gateway-service/src/main/resources/: bootstrap.yml
backend/src/main/java/com/workcode/backend/: BackendApplication.java
backend/src/main/resources/: application.properties
backend/src/test/java/com/workcode/backend/: BackendApplicationTests.java
backend/users-service/: pom.xml
backend/users-service/src/main/resources/: application.properties  bootstrap.yml
backend/workspaces-service/: pom.xml
backend/workspaces-service/src/main/resources/: application.properties  bootstrap.yml
frontend/: package.json  (+1 more)
(+142 files in other folders)
